--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@types/dagre": "^0.7.53",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^8.13.0",
